@@ -3,6 +3,7 @@ CONCEPT
 examples/ex1.pl
 examples/ex2.pl
 HTML.pm
+images/ex1.png
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
